--- a/public/backend/themes/metronic/assets/css/style.dark.bundle.css
+++ b/public/backend/themes/metronic/assets/css/style.dark.bundle.css
@@ -48824,6 +48824,64 @@ body {
   border: 0;
 }
 
+.toast-top-center {
+  top: 0;
+  right: 0;
+  width: 100%;
+}
+
+.toast-bottom-center {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+}
+
+.toast-top-full-width {
+  top: 0;
+  right: 0;
+  width: 100%;
+}
+
+.toast-bottom-full-width {
+  bottom: 0;
+  right: 0;
+  width: 100%;
+}
+
+.toast-top-left {
+  top: 12px;
+  left: 12px;
+}
+
+.toast-top-right {
+  top: 12px;
+  right: 12px;
+}
+
+.toast-bottom-right {
+  right: 12px;
+  bottom: 12px;
+}
+
+.toast-bottom-left {
+  bottom: 12px;
+  left: 12px;
+}
+
+#toastr-container.toast-top-center > div,
+#toastr-container.toast-bottom-center > div {
+  min-width: 380px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#toastr-container.toast-top-full-width > div,
+#toastr-container.toast-bottom-full-width > div {
+  width: 96%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .generer_key_api {
   border-radius: 5px 0px 0px 5px;
 }
@@ -48864,8 +48922,9 @@ div.dataTables_wrapper div.dataTables_processing {
   border-bottom-color: #525252;
 }
 
-.toast {
-  opacity: 0.95 !important;
+#toastr-container > div {
+  opacity: 1 !important;
+  border-radius: 3px 3px 3px 3px !important;
 }
 
 .toast-message ul {
