--- a/public/backend/themes/metronic/assets/css/style.bundle.css
+++ b/public/backend/themes/metronic/assets/css/style.bundle.css
@@ -49817,3 +49817,9 @@ div.dataTables_wrapper div.dataTables_processing .loaderContainer .textProcessin
   font-size: 1.3rem;
   padding: 10px;
 }
+
+.table .thead-light th {
+  color: #595d6e;
+  background-color: #ebedf2;
+  border-color: #ebedf2;
+}
